--- a/未命名.md
+++ b/未命名.md
@@ -6,21 +6,52 @@
 曾经在python黑帽子中看到过这个python写的工具，可谓是非常强大，但中文资料少之又少，无奈从文档学起。
 `http://www.secdev.org/projects/scapy/doc/index.html`
 - 主机探测
-  我在内网ip段广播 ARP包，获取在线主机回复 得到在线主机的ip和mac 更新主机列表
+  我在内网ip段广播 ARP包，获取在线主机回复 得到在线主机的ip和mac地址 更新主机列表
   scapy提供了简单的实现
   ![](http://p1.bpimg.com/567571/922f44293c6a7d43.png)
   而我根据需求自己重写了一下
   ![](http://p1.bpimg.com/567571/84f70b9db80d2111.png)
 - 断网、监听功能
   用arp欺骗的原理实现断网与监听功能
-  至于arp攻击的原理我就不说了，其实还是有些困惑的，而代码基本都是从python黑帽子改编的，这里就不发了
+  至于arp攻击的原理我就不说了，而代码基本都是从python黑帽子改编的，这里就不发了
+
   
 #####2、flask实现ui
 之前也用flask给单位写过几个小工具，用来报报数什么的，还是挺顺手的，这回又用起它，省着写界面的痛苦
 （其实写前端也不轻松）
-- 其实更多的作用是**bootstrap** 像我这样没什么审美细胞的人来说，用它写界面再好不过
-
+- flask-bootstrap3
+其实更多的是**bootstrap** 像我这样没什么审美细胞的人来说，用它写界面再好不过
+   bootstrap-table真的挺强大的！
+- flask-socketio与后端通信
+   用这个就不用Ajax 了
 #####3、celery做异步后台任务
+celery属于现学现卖 很多code都是照着文档和小明哥的绿皮书上改编的 从一开始想做异步任务到对celery的了解 踩了不少坑 也是各种google
+- rabbitmq(参考绿皮书)
+   1.安装 
+```
+apt install rabbitmq-server -yq 
+```
+   2.建立用户 设置vhost和权限
+   
+```
+rabbitmqctl add_user yourname passwd
+rabbitmqctl add vhost web
+rabbitmqctl set_permissions -p web yourname ".*" ".*" ".*" 
+```
+   3.配置celeryconfig.py
+   
+
+
+- flower
+  好用的可视化插件 更直观的观察celery 
+- supervisor 
+   用它来将celery进程变成守护进程 管理也方便
+   
+```
+pip install supervisor
+```
+这是一篇流水账 记录一下学习的过程 看看别人发的
+
 
   
   
